got the whole start parking done all 3 steps all buttons work and flow for this may need to check a logic issue but isnt anything too big

--- a/CSS/step3.css
+++ b/CSS/step3.css
@@ -99,6 +99,13 @@ body {
     flex-grow: 1;
     overflow-y: auto;
   }
+
+  .content i {
+    font-size: 30px;
+    color: black;
+    margin-right: 5px;
+  }
+  
   
   .highlight-value {
     color: #00abbe;
@@ -125,6 +132,23 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     margin-right: 10px;
   }
+
+  .styled-input {
+    width: 100%;
+    padding: 12px 15px;
+    font-size: 16px;
+    border: 2px solid #ccc;
+    border-radius: 12px;
+    margin: 10px 0 20px;
+    outline: none;
+    transition: 0.3s;
+  }
+  
+  .styled-input:focus {
+    border-color: #007bff;
+    box-shadow: 0 0 8px rgba(0, 123, 255, 0.3);
+  }
+
   
   .end-btn {
     background-color: #e53935;
@@ -137,6 +161,64 @@ body {
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   }
+
+  .popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+  }
+  
+  .popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 20px;
+    text-align: center;
+    width: 80%;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  }
+  .popup-content h3 {
+    color: black;
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+  
+  .popup-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 10px;
+  }
+  
+  .popup-btn {
+    padding: 10px 25px;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 12px;
+    color: white; /* white text inside */
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  
+  .popup-btn.yes {
+    background-color: green;
+  }
+  
+  .popup-btn.no {
+    background-color: red;
+  }
+  
+  .popup-btn:hover {
+    opacity: 0.9;
+  }
+    
   
   .button-row {
     display: flex;
@@ -153,8 +235,13 @@ body {
     gap: 12px;
     font-size: 16px;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 25px;
   }
+  .notify-options i.fa-bell {
+    font-size: 35px;
+    color: #00abbe;
+  }
+  
   
   .radio-label {
     display: flex;
@@ -181,7 +268,7 @@ body {
 
 
 
-  
+
 
 
   .bottom-nav {
